FIx: added overflow-x:hidden to body&HTML to fix animation overflow

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -20,6 +20,10 @@ address a {
     padding: 0;
 }
 
+body,html{
+    overflow-x: hidden;
+}
+
 hr.line-light {
     border-top: 2px solid #5e503f;
     width: 50%;
